# Galaga-game

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: Game.h  GameContext.h  GameScene.h  IScene.h  MenuScene.h  assetManager.h  bee.h  bee_pool.h  big_guy.h  big_guy_pool.h  bullet_pool.h  collision_manager.h  configManager.h  entity.h  entityConfig.h  entityFactory.h  final_scene.h  ipost_effect.h  particle.h  particleConfig.h  physic.h  player.h  player_bullet.h  score_manager.h  win_scene.h
src/: Game.cpp  GameContext.cpp  GameScene.cpp  MenuScene.cpp  assetManager.cpp  bee.cpp  bee_pool.cpp  big_guy.cpp  big_guy_pool.cpp  bullet_pool.cpp  collision_manager.cpp  configManager.cpp  entity.cpp  entityFactory.cpp  final_scene.cpp  main.cpp  particle.cpp  player.cpp  player_bullet.cpp  score_manager.cpp  win_scene.cpp
src/configs/: constants.json  entities.json
